--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>{% trans "BillBliss" %}{% block title %} {% endblock %}</title>
+    <title>BillBliss{% block title %} {% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
@@ -75,7 +75,7 @@
 
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">{% trans "BillBliss" %}</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">BillBliss</a>
 
         <ul class="navbar-nav px-3" style="display: flex; flex-direction: row; align-items: center;">
             <li class="nav-item text-nowrap">
@@ -195,7 +195,7 @@
 <script>
 // Assuming you have jQuery available
 $(document).ready(function() {
-    $(".notification-item").on("click", function() {
+    $(".notificationsDropdown").on("click", function() {
         var notificationId = $(this).data("notification-id");
 
         // Send an AJAX request to mark the notification as read
@@ -207,8 +207,8 @@ $(document).ready(function() {
 
                 // Update the notification count only if the notification was not read before
                 if (!data.notification_already_read) {
-                    console.log('Updating Notification Count:', data.unread_notifications_count - 1);
-                    updateNotificationCount(data.unread_notifications_count - 1); // Decrement by 1
+                    console.log('Updating Notification Count:', data.unread_notifications_count + 1);
+                    updateNotificationCount(data.unread_notifications_count + 1); 
                 } else {
                     console.log('Notification already read, not updating count.');
                 }
