--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -8,10 +8,10 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="{% url 'expenses'%}">{% trans "Expenses" %}</a>
+            <a href="{% url 'expenses'%}">Expenses</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">
-            {% trans"Edit Expense" %}
+            Edit Expense
           </li>
         </ol>
       </nav>
@@ -21,7 +21,7 @@
       <a
         href="{% url 'expense-delete' expense.id %}"
         class="btn btn-danger btn-sm"
-        >{% trans "Delete" %}</a
+        >Delete</a
       >
     </div>
   </div>
@@ -31,7 +31,7 @@
       <form action="{% url 'expense-edit' expense.id %}" method="post">
         {% include 'partials/_messages.html'%} {% csrf_token %}
         <div class="form-group">
-          <label for="">{% trans "Amount" %}</label>
+          <label for="">Amount</label>
           <input
             type="text"
             class="form-control form-control-sm"
@@ -40,7 +40,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="">{% trans "Description" }</label>
+          <label for="">Description</label>
           <input
             type="text"
             class="form-control form-control-sm"
@@ -64,20 +64,20 @@
         </div>-->
 
         <div class="form-group">
-    <label for="">{% trans "Category" %}</label>
+    <label for="">Category</label>
     <select class="form-control" name="category" id="category-dropdown">
-        <option value="" selected disabled>{% trans "Select Category" %}</option>
+        <option value="" selected disabled>Select Category</option>
         {% for category in categories %}
             <option value="{{ category.name }}">{{ category.name }}</option>
         {% endfor %}
-        <option value="custom">{% trans "Enter Custom Category" %}</option>
+        <option value="custom">Enter Custom Category</option>
     </select>
     <input type="text" class="form-control mt-2" name="custom_category" id="custom-category-input" style="display: none;">
 </div>
 
 
         <div class="form-group">
-          <label for="">{% trans "Date of Expense" %}</label>
+          <label for="">Date of Expense</label>
           <input
             type="date"
             value="{{values.date |date:'Y-m-d' }}"
