--- a/templates/expenses/notification_email.html
+++ b/templates/expenses/notification_email.html
@@ -1,4 +1,4 @@
-<!-- templates/email/notification_email.html -->
+<!-- email sent when expenses exceed budget-->
 {% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
