--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,3 +1,4 @@
+<!--sidebar-->
 {% load i18n %}
 {% load static %}
 
@@ -129,6 +130,8 @@ function changeLanguage(language) {
 }
 
 </script>-->
+
+<!--js code for making a field active-->
 
 <script>
     // Get the current path of the page
