--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,9 +1,10 @@
+<!--for registration-->
 {% extends 'base_auth.html' %}
 {% load static %}
 
 
 {% block content %}
-
+<!-- form having username, email and password as fields and a button to submit-->
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
@@ -57,6 +58,8 @@
           </div>
           <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn" />
         </form>
+
+        <!--forgot password feature and login option-->
 <div class="container">
         <span class="text-lead lead">Have an account?</span><a href="{% url 'login' %}">Login</a>
         <br>
