--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,4 @@
-
+<!--dashboard page-->
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
@@ -7,14 +7,16 @@
     {% include 'partials/_sidebar.html' %}
 {% endblock %}
 <div class="dashboard-section mt-4">
-        <h2 class="display-4">Dashboard</h2>
+        <h2 class="display-4">Your Dashboard</h2>
         
         <p class="lead">
-            Your Total Expense/Your Budget:
-        </p>
-        <p>
+            Spent / Budget:
             <span class="text-muted">{{ total_user_expenses }}</span> /
             <span class="text-muted">{{ user_budget }}</span>
+        </p>
+        <p class="lead">
+            Remaining limit:
+            <span class="text-success">{{ difference }}</span> 
         </p>
 </div>
 <div class="row">
@@ -25,6 +27,8 @@
 
  </div>
 </div>
+
+<!--js code for displaying chart using dashboard.js-->
 <script>
     const getDashboardData = () => {
         console.log("fetching dashboard data");
@@ -34,7 +38,7 @@
                 console.log("dashboard results", results);
                 const { total_user_expenses, user_budget, difference } = results;
 
-                renderDashboardChart(total_user_expenses, user_budget, difference);
+                renderDashboardChart(user_budget, total_user_expenses, difference);
             });
     };
 
